
2023-07-05  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* flag.def/cobc.c: new flags -fno-ttimestamp to suppress timestamp
	  in listing headers, and -fttitle=<TITLE>, so that listings can be
	  compared accross different versions and dates. This patch partially
	  implements feature-request #294.
	  Replace numeric constants in flags and switch by a constant macro
	  CB_FLAG_GETOPT_. Remove unused 'case 6:' for -fdefaultbyte that is
	  now handled in config.c

2023-07-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_char): extracted usage of disabled code for
	  char generation as char into this new inline function
	* codegen.c (output_char): fixed previously disabled code and enable it
	  by default, old code may still be used with defining GEN_CHAR_AS_UINT
	* codegen.c (output_initialize_to_value): handle zero-length VALUE
	* codegen.c (output_initialize_to_value): fix cb_initial_justify
	* codegen.c (output_initialize_to_value): disable setting from a
	  possibly huge internal buffer with a single generated memcpy from
	  a generated string, instead use a local buffer of max. 128 bytes
	  and set padding spaces with memset for bigger fields, old code may
	  still be used with defining GEN_SINGLE_MEMCPY

2023-07-03  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (check_listing): rewrite of change 2022-07-04:
	  do not output sequence number of short lines,
	  but keep its line break and the general output
	* pplex.l: drop unused "requires_new_line" (added without use in OC2.0)

2023-07-01  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l: add check for reserved word FUNCTION, add missing
	  word value for not reserved SUPPRESS and SEND
	* parser.y (at_line_column): fixed bad cast when conflicting clauses
	  were used, fixing bug #601

2023-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_function_prototypes): generate plain "extern"
	  instead of "COB_EXT_IMPORT" again, as the second only works with